--- a/_sass/color_schemes/custom.scss
+++ b/_sass/color_schemes/custom.scss
@@ -3,5 +3,15 @@
 $body-font-family: "Roboto", sans-serif;
 $mono-font-family: "Roboto Mono", monospace;
 
+$grey-lt-000: #FAFAFA;
+$grey-lt-100: #F5F5F5;
+$grey-lt-200: #EEEEEE;
+$grey-lt-300: #E0E0E0;
+$grey-dk-000: #757575;
+$grey-dk-100: #616161;
+$grey-dk-200: #424242;
+$grey-dk-250: #212121;
+$grey-dk-300: #000000;
+
 $link-color: $grey-dk-300;
 $btn-primary-color: $grey-dk-300;
