--- a/_sass/color_schemes/custom.scss
+++ b/_sass/color_schemes/custom.scss
@@ -15,3 +15,16 @@ $grey-dk-300: #000000;
 
 $link-color: $grey-dk-300;
 $btn-primary-color: $grey-dk-300;
+
+$color-scheme: light;
+$body-background-color: $white;
+$body-heading-color: $grey-dk-300;
+$body-text-color: $grey-dk-100;
+$nav-child-link-color: $grey-dk-100;
+$sidebar-color: $grey-lt-000;
+$base-button-color: #f7f7f7;
+$code-background-color: $grey-lt-000;
+$feedback-color: darken($sidebar-color, 3%);
+$table-background-color: $white;
+$search-background-color: $white;
+$search-result-preview-color: $grey-dk-000;
