--- a/_sass/color_schemes/custom.scss
+++ b/_sass/color_schemes/custom.scss
@@ -3,6 +3,10 @@
 $body-font-family: "Roboto", sans-serif;
 $mono-font-family: "Roboto Mono", monospace;
 
+$blue-000: #03A9F4;
+$blue-100: #039BE5;
+$blue-200: #0288D1;
+$blue-300: #0277BD;
 $grey-lt-000: #FAFAFA;
 $grey-lt-100: #F5F5F5;
 $grey-lt-200: #EEEEEE;
@@ -13,8 +17,8 @@ $grey-dk-200: #424242;
 $grey-dk-250: #212121;
 $grey-dk-300: #000000;
 
-$link-color: $grey-dk-300;
-$btn-primary-color: $grey-dk-300;
+$link-color: $blue-000;
+$btn-primary-color: $blue-000;
 
 $color-scheme: light;
 $body-background-color: $white;
@@ -25,6 +29,6 @@ $sidebar-color: $grey-lt-000;
 $base-button-color: #f7f7f7;
 $code-background-color: $grey-lt-000;
 $feedback-color: darken($sidebar-color, 3%);
-$table-background-color: $white;
+$table-background-color: $grey-lt-000;
 $search-background-color: $white;
 $search-result-preview-color: $grey-dk-000;
