--- a/_sass/color_schemes/custom.scss
+++ b/_sass/color_schemes/custom.scss
@@ -29,6 +29,6 @@ $sidebar-color: $grey-lt-000;
 $base-button-color: #f7f7f7;
 $code-background-color: $grey-lt-000;
 $feedback-color: darken($sidebar-color, 3%);
-$table-background-color: $grey-lt-000;
+$table-background-color: $white;
 $search-background-color: $white;
 $search-result-preview-color: $grey-dk-000;
