--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -2,3 +2,10 @@
   box-shadow: none;
   border: $border rgba($border-color, 1);
 }
+
+h1,
+.text-alpha {
+  font-weight: 700;
+
+  @include fs-8;
+}
