--- a/_sass/color_schemes/custom.scss
+++ b/_sass/color_schemes/custom.scss
@@ -3,10 +3,10 @@
 $body-font-family: "Roboto", sans-serif;
 $mono-font-family: "Roboto Mono", monospace;
 
-$blue-000: #03A9F4;
-$blue-100: #039BE5;
-$blue-200: #0288D1;
-$blue-300: #0277BD;
+$blue-000: #1E88E5;
+$blue-100: #1976D2;
+$blue-200: #1565C0;
+$blue-300: #0D47A1;
 $grey-lt-000: #FAFAFA;
 $grey-lt-100: #F5F5F5;
 $grey-lt-200: #EEEEEE;
