--- a/_sass/color_schemes/custom.scss
+++ b/_sass/color_schemes/custom.scss
@@ -3,10 +3,26 @@
 $body-font-family: "Roboto", sans-serif;
 $mono-font-family: "Roboto Mono", monospace;
 
+$red-000: #E53935;
+$red-100: #D32F2F;
+$red-200: #C62828;
+$red-300: #B71C1C;
+$purple-000: #8E24AA;
+$purple-100: #7B1FA2;
+$purple-200: #6A1B9A;
+$purple-300: #4A148C;
 $blue-000: #1E88E5;
 $blue-100: #1976D2;
 $blue-200: #1565C0;
 $blue-300: #0D47A1;
+$green-000: #43A047;
+$green-100: #388E3C;
+$green-200: #2E7D32;
+$green-300: #1B5E20;
+$yellow-000: #FDD835;
+$yellow-100: #FBC02D;
+$yellow-200: #F9A825;
+$yellow-300: #F57F17;
 $grey-lt-000: #FAFAFA;
 $grey-lt-100: #F5F5F5;
 $grey-lt-200: #EEEEEE;
